--- a/web-calculator/css/main.css
+++ b/web-calculator/css/main.css
@@ -1,20 +1,62 @@
+* {
+  box-sizing: border-box;
+  font-family: KacstDigital , monospace;
+}
 
 #calculator-container {
-
+  background-color: white;
+  position: absolute;
+  left: 40%;
+  top: 20%;
+  width: 400px;
+  text-align: center;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
 }
 
 #calculator-display {
+  padding: 10px;
+  /*background-color: beige;*/
+  width: 100%;
+}
 
+#calculator-expression {
+  width: 100%;
+  height: 40px;
+  border: 1px solid black;
+  border-radius: 10px;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 #calculator-body {
-
+  padding: 10px;
+  /*background-color: red;*/
 }
 
 .row {
   display: table;
+  width: 100%;
 }
 
-.calculater-button {
+.calculator-button {
   display: table-cell;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.calculator-button button {
+  width: 50px;
+  margin: 5px;
+  background-color: #DFE1E5;
+  border-radius: 5px;
+  box-shadow: 0 2px #999;
+  border: 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.calculator-button button:hover {
+  background-color: #888888;
 }
