--- a/web-calculator/css/main.css
+++ b/web-calculator/css/main.css
@@ -60,3 +60,21 @@
 .calculator-button button:hover {
   background-color: #888888;
 }
+
+#calculator-result {
+
+  margin-top: 10px;
+
+  border: 1px solid black;
+  border-radius: 10px;
+
+  text-align: center;
+
+  width: 100%;
+  height: 40px;
+
+  font-size: 28px;
+  font-weight: bold;
+
+  visibility: hidden;
+}
