--- a/trello/main.css
+++ b/trello/main.css
@@ -4,9 +4,10 @@
 }
 
 body {
+    height: auto;
+    width: 100%;
     margin: 0;
     padding: 0;
-    width: 100%;
 }
 
 header {
@@ -18,6 +19,7 @@ header {
 #home-button-container {
     height: 100%;
     width: 50px;
+    margin: 0 2px;
     background-color: #0067A3;
     float: left;
 }
@@ -57,7 +59,6 @@ header {
     height: 80%;
     width: 100%;
     margin: 4px 4px;
-
     border: 0;
     border-radius: 4px;
     outline: none;
@@ -104,18 +105,33 @@ nav {
 }
 
 .list-name {
-    margin-left: 5px;
+    margin-left: 20px;
 }
 
 .list-card {
+    width: 80%;
+    margin: 0 20px;
+    /*border: black solid 1px;*/
     border-radius: 5px;
     background-color: #FFFFFF;
-    width: 80%;
-    margin: 20px;
-    border: black solid 1px;
+}
+
+
+.list-card-color {
+    height: 10px;
+    min-width: 40px;
+    max-width: 40px;
+    margin-left: 10px;
+    border-radius: 4px;
+    background-color: orange
+}
+
+.list-card-color span {
+
 }
 
 .list-card-content {
+    height: auto;
     margin: 10px;
 }
 
